--- a/posts/2022-12-25.md
+++ b/posts/2022-12-25.md
@@ -22,15 +22,15 @@ WITH
     ),
     -- use `symm` to find length-two paths.
     path2 (a, b, c) AS (
-        SELECT DISTINCT e1.a, e1.b, e2.b as c,
+        SELECT DISTINCT e1.a, e1.b, e2.b as c
         FROM symm e1, symm e2
         WHERE e1.b = e2.a
     )
 -- Produce triples (a, b, c) where symm(a, c) and symm(a, b, c) exist.
-SELECT DISTINCT a, b, c
+SELECT DISTINCT path2.a, path2.b, path2.c
 FROM path2, symm
 WHERE path2.a = symm.a
-  AND path2.c = symm.b
+  AND path2.c = symm.b;
 ```
 You can even use the bindings in subsequent expressions, as we did with `edges` in `path2`.
 
@@ -52,14 +52,14 @@ WITH RECURSIVE
         FROM symm, reach 
         WHERE symm.b = reach.a
     )
-SELECT * FROM reach
+SELECT * FROM reach;
 ```
 This is the classic example of recursion that you see in languages like [Datalog](https://en.wikipedia.org/wiki/Datalog), and StackOverflow pages discussing `WITH RECURSIVE`, but relatively rarely in actual SQL queries.
 Why is that?
 
 As it turns out, `WTIH RECURSIVE` has a bevy of limitations and mysterious semantics (four pages of limitations in the version of the standard I have, and I still haven't found the semantics yet).
 I certainly cannot enumerate, or even understand the full list, and will defer to the likes of [@teggy](https://twitter.com/Teggy) to expound upon the issues.
-The main one that I'll flag, a total mystery to me that encapsulates my confusion, is that (in PostgreSQL at least)
+Fortunately, `@teggy` does provide [a worked example](https://twitter.com/Teggy/status/1347574113079087104) that encapsulates my confusion, that (in PostgreSQL at least)
 ```sql
 mcsherry=# WITH RECURSIVE 
     t(n) AS (
@@ -94,9 +94,9 @@ Why no requirement that `t2.n` be bounded?
 Why isn't the result a fixed-point of the query that defines `t`?
 
 The above is an example of "non-linear recursion" (`t` is *used* twice in the recursive term), which is both defined and forbidden in the SQL standard. 
-Except that the SQL standard defined linear recursion to be a query that references the recursive term only once, a syntactic rather than semantic constraint.
+Except that the SQL standard defines linear recursion to be a query that references the recursive term only once, which is a syntactic rather than semantic constraint.
 They seemed to forget that this was in the part of the standard (`WITH` clauses) used to rebind names.
-So the above query should be accepted as "linear recursion", and just has crazy-pants semantics.
+So according to the SQL standard the above query should be accepted as "linear recursion", and just has the crazy-pants semantics of "evaluate as if linearly recursive".
 
 ## Recursion in Materialize
 
@@ -115,7 +115,7 @@ WITH MUTUALLY RECURSIVE
 body_select_clause
 ```
 
-The results of the clause are as if you start each binding from an empty collection, then sequentially update the definitions of each binding in sequence, repeating the list of all bindings until no changes remain, and then evaluate the body with these final bindings.
+The results of the clause are as if you start each binding from an empty collection, then update the definition of each binding in sequence, repeating the list of all bindings until no changes remain, and then evaluate the body with these final bindings.
 The computation may never stop, in which case .. there is no result and your computer will probably be busy for a while determining that.
 But if it does stop, the configuration of bindings will be a fixed point, and the clause returns some query over that fixed point.
 
@@ -217,7 +217,7 @@ SELECT a, MIN(b) FROM reach GROUP BY a
 ```
 The paper observes that this query is frustrating because you cannot clearly communicate that as you develop `reach` you can discard all but the smallest `b` for each `a`.
 You could rely on a sophisticated query optimizer to determine that it can push the `MIN` into the recursive definition. 
-However, if you and that optimizer disagree on what constitutes "sophisticated", you are out of luck.
+However, if you and that optimizer disagree on what passes for "sophisticated", you are out of luck.
 The paper proposes a `WITH ITERATIVE` construct that makes some different choices than we did, but it also allows you to communicate what data are not required.
 
 In Materialize we can write label propagation as
@@ -282,9 +282,10 @@ WITH MUTUALLY RECURSIVE
 SELECT * FROM parses;
 ```
 We use `parses` twice in the recursive branch, and it is important for correctness that we do so.
+It sounds like the "Fix" authors think you can get SQL's `WITH RECURSIVE` to implement this with some head-balancing, but neither they nor I think that is a good idea.
 
 For bonus points, imagine you want to know how to parse the input, rather than only if it parses.
-You'd have to tweak the query to add to `parses` breadcrumb columns about how to find derivations that each record, for example columns `via`, `rhs1`, and `rhs2` for the columns equated in the join.
+You'd have to tweak the query to add to `parses` breadcrumb columns about how to find derivations for each `parses` row, for example columns `via`, `rhs1`, and `rhs2` for the columns equated in the join.
 However, you don't need to keep *all* the derivations for each row in `parses`; one will suffice.
 This is again a data reduction we could explain in the language, as with undirected connectivity, without which we risk a much less efficient implementation.
 
@@ -388,3 +389,11 @@ Fortunately, we are well-positioned to make recursion delightful.
 You don't need to take thing away from SQL other than the restrictions on recursion.
 
 Also go read [A Fix for the Fixation on FixPoints](https://www.cidrdb.org/cidr2023/papers/p14-hirn.pdf).
+
+## Caveats
+
+Materialize's `WITH MUTUALLY RECURSIVE` is currently experimental, and may never land.
+It certainly isn't optimized yet (the optimizer literally nopes out of any optimizations other than some normalization).
+If we learn amazing things about why `WITH RECURSIVE` is the way that it is, we may need to change what we have done!
+
+We also have a late-arriving proposal from Jamie Brandon to use `ACTUALLY` instead of `MUTUALLY`.
