--- a/posts/2022-07-06.md
+++ b/posts/2022-07-06.md
@@ -19,17 +19,17 @@ I haven't concluded that these changes to the base game are as much "fun" as the
 
 We will do all of this in steps, to try and avoid overwhelming you.
 
-1. Background on Minesweeper, and our goals.
-2. Oursweeper in SQL.
-3. Views to automate how you play Oursweeper.
+1. [Background on Minesweeper, and our goals.](#background-on-minesweeper)
+2. [Oursweeper in SQL.](#oursweeeper-in-sql)
+3. [Using SQL to play Oursweeper.](#using-sql-to-play-oursweeper)
 4. Architecture in Materialize: tables, views, indexes, materialized views.
 
 ## Background on Minesweeper
 
 Minesweeper is a game played on a large grid, in which various mines are concealed under grid squares.
 Your job is to discover where the mines are, indirectly.
-Rather than click on any mines, instead you are meant to click on non-mine squares, and be told the number of adjacent squares (at most eight) that hide a mine.
-Using these numbers and your high-powered noggin you are meant to deduce which squares must have mines, and then which squares cannot have mines, click on *those* squares, and repeat indefinitely.
+Rather than directly interact with any mines (ouch) you are instead meant to click on non-mine squares, and be told the number of adjacent squares (at most eight) that hide a mine.
+Using these numbers and your high-powered noggin you are meant to deduce which squares must have mines, and which squares cannot have mines, click on *the* latter type of square, and repeat indefinitely.
 
 Here's an example visual that we will actually build up to.
 Each grid location is a count of the number of adjacent mines, or a "`X`" to indicate a flagged mine, or a "`.`" to indicate "as yet unknown".
@@ -63,14 +63,14 @@ Mechanically, you the user "left click" on a square to reveal its count (or expl
 
 Minesweeper is normally played on a bounded grid, but there is no reason this needs to be the case.
 
-The rules of Minesweeper make plenty of sense even if the grid cells spill off the side of the window you are looking at.
+The rules of Minesweeper make plenty of sense even if the grid cells spill off the four sides of the window you are looking at.
 Moreover, there is no reason you shouldn't be able to scroll around, beyond the limits of the window you might initially open.
 There is no reason you shouldn't be able to play minesweeper on a 2^64 x 2^64 game board, where you just happen to pick your favorite coordinate to center your screen on.
 This is what https://m3o.xyz does, as far as I can tell, and we are going to do that too.
 
-To make this work, obviously we won't be able to actually populate 2^128 cells.
+To make this work, obviously we won't actually populate 2^128 cells.
 Instead, we will use a pseudorandom function from `(x, y)` to determine the nature of the mine at location `(x, y)`.
-Of course, we will only evaluate the locations around those that a user has clicked on, determining where mines exist lazily but consistently.
+We will only evaluate the locations around those that a user has clicked on, determining where mines exist lazily, but consistently.
 If other folks visit the same location as you, either collaborators or adversaries, they will see the same mines that you saw.
 
 The intended experience is that of a vast and limitless sea uniformly full of dangerous mines and logical opportunities.
@@ -80,7 +80,8 @@ The intended experience is that of a vast and limitless sea uniformly full of da
 Why not let multiple folks interact with the Minesweeper board at the same time?
 
 You would need to back it in something like a database, and provide handy views that implement "the rules".
-Fortunately, Materialize is pretty much a databases, so this could plausibly work out.
+Fortunately, Materialize is pretty much a database, so this could plausibly work out.
+Materialize is also great at defining and maintainng viwews over the data, which we will use to encode "the rules".
 
 We'll spend most of the rest of the post doing exactly this.
 We will assemble SQL tables, views, and queries to mock up a massively multiplayer minesweeper on Materialize.
@@ -93,7 +94,7 @@ First, clicking on a mine would normally end the game.
 It won't do that here.
 We'll keep track of the mines you've clicked on, both flags and tests, correct and incorrect, and perhaps the leaderboards will report all in a [Pareto frontier](https://en.wikipedia.org/wiki/Pareto_front).
 
-If you are a minesweeper purist, you can stop playing as soon as you click on a mine, as for better or for worse Materialize will now durably record your error.
+If you are a minesweeper purist you can stop playing as soon as you click on a mine, as Materialize will durably record your error.
 
 Second, rather than rolling a die to see *if* a grid cell has a mine for everyone, each grid cell *will* have a mine and we'll roll a die to stamp a number onto the mine.
 You can play the game where `0` means that a mine is present.
@@ -169,7 +170,7 @@ Players play by inserting into these tables using their `team` name.
 
 ### Observing some output
 
-If players guess wrong the game still goes on, but let's make some views to notice the errors.
+If players guess wrong the game still goes on, but let's make some views to notice their errors.
 ```sql
 -- Errors are too bad. But they don't end the game.
 create materialized view errors as
@@ -184,9 +185,10 @@ We'll now start up in one session a subscription to a view of errors:
 ```
 materialize=> copy (subscribe errors) to stdout;
 ```
-There isn't any output, which makes sense as there also isn't an input.
+There isn't any output, which makes sense as there also is not yet any input.
 
-Let's add an incorrect guess about a mine:
+Let's add an incorrect guess about a mine.
+I happen to know that the mine at `(0, 0)` has value `1`, so let's guess `0`.
 ```
 materialize=> insert into flags values (0, 0, 0, 'frank');
 INSERT 0 1
@@ -210,33 +212,42 @@ This entry wasn't erroneous, and so "no change" in the view.
 Had we run the `SUBSCRIBE` with the `PROGRESS` option, there would be a steady heartbeat of timestamp messages confirming that no changes have occured, which affirmatively distinguishes from the case that the session is just backed up.
 
 Let's set up a scoreboard as well!
+
+You may have noticed the `team` column, with `'frank'` filled in there.
+We'll use this column as a way for multiple players to self-identify as collaborators.
+Their guesses, errors, and other information will all feed to the same reports.
 ```sql
 -- Count up the correct tests and flags for each team
 create materialized view scoreboard as
 with
-teams(team) as (
-    select distinct team
-    from (
-        select team from tests
-        union all
-        select team from flags
+    -- distinct teams from either input.
+    teams(team) as (
+        select distinct team
+        from (
+            select team from tests
+            union all
+            select team from flags
+        )
+    ),
+    -- count the number of correct tests.
+    test_count(team, tests) as (
+        select team, count(*)
+        from correct_tests
+        group by team
+    ),
+    -- count the number of correct flags.
+    flag_count(team, flags) as (
+        select team, count(*)
+        from correct_flags
+        group by team
+    ),
+    -- count the number of errors.
+    error_count(team, errors) as (
+        select team, count(*)
+        from errors
+        group by team
     )
-),
-test_count(team, tests) as (
-    select team, count(*)
-    from correct_tests
-    group by team
-),
-flag_count(team, flags) as (
-    select team, count(*)
-    from correct_flags
-    group by team
-)
-error_count(team, errors) as (
-    select team, count(*)
-    from errors
-    group by team
-)
+-- left join the teams against each of the things to report.
 select teams.team, tests, flags, errors
 from teams
     left join test_count on (teams.team = test_count.team)
@@ -245,12 +256,13 @@ from teams
 ```
 
 We can now pull down these reports for each team.
-Maybe in the future we will reduce down to those teams that are not strictly dominated by the performance of another team ("Skyline queries" in SQL).
+We can `SELECT` from the view, or `SUBSCRIBE` to it, as you like.
+Maybe in the future we will reduce down to those teams that are not strictly dominated by the performance of another team (["Skyline queries"](https://en.wikipedia.org/wiki/Skyline_operator) in SQL).
 
 ### Probing Locations
 
-Our next step is to take our `flag` and `test` collections, and have them prompt numbers to report to the players.
-A correct `test` reveals the count under it, as in standard minesweeper.
+Our next step is to take our `flag` and `test` collections, and have them produce numbers to report to the players.
+A correct `test` should reveal the count under it, as in standard minesweeper.
 ```
 materialize=> select * from correct_tests;
  x | y | mine | team
@@ -260,8 +272,9 @@ materialize=> select * from correct_tests;
 materialize=>
 ```
 
-Ah. Although we know that `(0, 0)` contains a mine of type `1`, we haven't actually tested for `0` yet.
-We could do that automatically, but let's ask folks to do this themselves.
+Ah. 
+Although we know that `(0, 0)` contains a mine of type `1`, and have flagged it as such, we haven't actually *tested* for `0` yet.
+We could do that automatically, but for now let's ask folks to do this themselves.
 
 ```
 materialize=> insert into tests values (0, 0, 0, 'frank');
@@ -296,24 +309,30 @@ from probes;
 
 -- The number of adjacent mines for probed locations.
 create materialized view totals as
-select x, y, mine, team, count(*)
-from reports
+select x, y, mine, team, count(*) - 1 as count
+from (
+    -- union `reports` with `correct_tests` to avoid a left join.
+    select * from reports
+    union all
+    select *, test from correct_tests
+)
 where mine = test
-group by 1, 2, 3, 5;
+group by 1, 2, 3, 4;
 ```
 
 If we look at the totals for the probes, we see:
 ```
 materialize=> select * from totals;
- x | y | mine | count | team
+ x | y | mine | team  | count 
 ---+---+------+-------+-------
- 0 | 0 |    0 |     0 | frank
+ 0 | 0 |    0 | frank |     0
 (1 row)
 
 materialize=>
 ```
 
-Luckily mine type `0` has no mines around it, and we should probably click upon all of its neighbors!
+Luckily, mine type `0` has no mines around it!
+We should probably click upon all of its neighbors!
 
 Before going down that rabbit hole, let's first figure out how to present this information.
 
@@ -460,7 +479,7 @@ materialize=>
 Equally fascinating!
 The same location, with different takes for different players, is visible on both outputs!
 
-In fact, we could `SUBSCRIBE` either of these views, and each player would get live updates from the other player's work.
+In fact, we could `SUBSCRIBE` to either of these views, and each player would get live updates from the other player's work.
 We would need a smarter interface than what we have presented, as `SUBSCRIBE` is perhaps overly simplistic:
 ```
 materialize=> copy (subscribe (select whole_row from output where mine = 0 and team = 'frank')) to stdout;
@@ -471,7 +490,7 @@ We would want to add back in the `y` colunm so that we could redraw the screen.
 We might want to `SUBSCRIBE` the `composited` relation to get individual changed squares, rather than whole rows.
 There are some really promising UX ideas here, where Materialize can ship you the minimal diff of information to update your presentation.
 
-## Using SQL to play Minesweeper
+## Using SQL to play Oursweeper
 
 You play Minesweeper by repeatedly `INSERT`ing into `flags` and `tests`.
 This probably gets tedious very quickly.
@@ -493,12 +512,11 @@ from
     (select * from totals where count = 0),
     generate_series(x - 1, x + 1) as new_x,
     generate_series(y - 1, y + 1) as new_y
-where x != new_x or y != new_y
-except all
+except
 select * from distinct_tests;
 ```
 
-If we peek at the contents of this view, we'll see locations that are safe to test.
+If we peek at the contents of this view, we'll see new locations that are safe to test.
 ```
 materialize=> select * from should_test where team = 'frank';
  x  | y  | test | team
@@ -515,7 +533,7 @@ materialize=> select * from should_test where team = 'frank';
 
 materialize=>
 ```
-As it turns out, all eight locations around the `(0, 0)` location are safe to test for mines of type `0`.
+All eight locations around the `(0, 0)` location are safe to test for mines of type `0`.
 We could go and `INSERT` each of them, or we could use a SQL query to do that for us:
 
 ```
@@ -557,8 +575,8 @@ materialize=>
 
 We have more zeros!
 You Minesweeper folks know what this means!
-We .. should keep clicking.
-We shouldn't *have* to keep clicking, but Materialize doesn't support `WITH RECURSIVE` yet (write your representative!)
+We .. should keep clicking!
+We shouldn't *have* to keep clicking, but Materialize doesn't support `WITH RECURSIVE` yet (write your representative!).
 
 ```
 materialize=> insert into tests select * from should_test;
@@ -599,6 +617,17 @@ materialize=> select whole_row from output where mine = 0 and team = 'frank' ord
 materialize=>
 ```
 
+Let's pause for a moment here and observe that the only things we are doing (twice now) are an `insert` followed by a `select`:
+```
+materialize=> insert into tests select * from should_test where team = 'frank';
+materialize=> select whole_row from output where mine = 0 and team = 'frank' order by y;
+```
+The view definitions are doing the hard work behind the scenes.
+They make sure that the outputs are correctly updated as a function of the input changes.
+Combined with Materialize's [Strict Serializable isolation](https://materialize.com/docs/overview/isolation-level/#strict-serializable), alternate `insert` and `select` statements show you the advancing board state you expect to see.
+
+Ok. 
+Enough pausing.
 Let's do a hand-rolled recursive process, and keep doing this `INSERT INTO` command until we have no more changes.
 ```
 materialize=> insert into tests select * from should_test where team = 'frank';
@@ -674,12 +703,13 @@ materialize=>
 ```
 
 That's pretty neat, isn't it!
-We've built up a little island, and might now start thinking about where we can certainly place mines.
+We've built up a little island.
+If you are familiar with Minesweeper you might now start thinking about where we can certainly place mines.
 
 ### Determining locations to flag
 
 We can place flags using a variety of rules.
-We'll use a simple one: if a grid cell with a count is short mines exactly the number of unmarked neighbors, all those neighbors must be mines.
+We'll use a simple one for now: if a grid cell with a count is short mines exactly the number of unmarked neighbors, all those neighbors must be mines.
 This rule is great for filling in all of those nooks and crannies you see up above.
 
 ```sql
@@ -822,7 +852,7 @@ How about mines of type `2`?
 ```
 materialize=> insert into tests select x, y, 2, team from correct_flags where not flag = 2 and team = 'frank';
 INSERT 0 13
-materialize=> materialize=> insert into viewport values (-10, 10, -10, 10, 2, 'frank');
+materialize=> insert into viewport values (-10, 10, -10, 10, 2, 'frank');
 INSERT 0 1
 materialize=> select whole_row from output where mine = 2 and team = 'frank' order by y;
                  whole_row
@@ -882,7 +912,7 @@ INSERT 0 2
 materialize=> insert into tests select * from should_test where team = 'frank';
 INSERT 0 0
 ```
-
+All inserted, we arrive at the following picture for player `2`:
 ```
 materialize=> select whole_row from output where mine = 2 and team = 'frank' order by y;
                  whole_row
@@ -915,201 +945,6 @@ materialize=>
 
 The expanded regions spill off the viewport in a few directions!
 
-## Universal Minesweepers
+## Architecture in Materialize
 
-While clicking on things can be fun, I hope the previous section has convinced you that SQL can be much better for this.
-
-This leads us to a new meta-game, in the spirit of [Universal Paperclips](https://en.wikipedia.org/wiki/Universal_Paperclips):
-how efficiently can independent teams populate the board with flagged mines and safe tests?
-
-We'll go through a series of Materialize mechanisms that let you build out more efficient (and better isolated) infrastructure.
-
-### Clusters
-
-A "cluster" in Materialize is a group of compute assets that share indexes, but are otherwise independent.
-All clusters share access to all tables, sources, views, and materialized views.
-By default you get put on a `default` cluster, with limited resources (and limited impact on other clusters).
-
-The first thing we'll want to do is create a new cluster for our team, to make sure we have exclusive access to some compute resources.
-This is done with the `create cluster` command, followed promptly by the `set cluster` command (
-```
-materialize=> create cluster team_frank replicas (small (size 'small'));
-materialize=> set cluster = 'team_frank';
-```
-This spins up a new `team_frank` cluster with modest resources, and makes it our active cluster.
-Until we change the cluster, `team_frank` will be used for our query processing.
-
-This alone would make all of our `select * from should_test where team = 'frank'` queries that much faster:
-well have more compute resources for them, and we wont be contending with other teams for those resources.
-At the moment there are no such other teams, but we can imagine.
-
-### Indexes
-
-Indexes are Materialize's mechanism to maintain views in memory and share them within the cluster.
-
-When you create an index (on a collection) Materialize will leap in to action and build a dataflow that computes and maintains the results.
-When you query that collection, say `select * from indexed_thing;`, Materialize will pull directly from the in-memory results.
-
-Where materialized views are about *sharing* data between clusters, indexes are about *arranging* data within a cluster.
-You create an index on a source, table, view, or materialized view, and it loads the contents into the memory of your cluster.
-More specifically, you can create an index with some subset of columns, and the data will be indexed by those columns.
-
-You can see that selecting from `should_test` is not as fast as we might like:
-```
-materialize=> select * from should_test;
- x | y | test | team
----+---+------+------
-(0 rows)
-
-Time: 381.977 ms
-```
-This is because `should_test` is a view, and we do a fair bit of work from its inputs to its outputs.
-```
-materialize=> explain select * from should_test;
-                  Optimized Plan
---------------------------------------------------
- Source materialize.public.tests (u4):           +
- | Project (#0..=#3)                             +
-                                                 +
- Source materialize.public.totals (u11):         +
- | Filter (#3 = 0)                               +
- | Project (#0..=#4)                             +
-                                                 +
- Query:                                          +
- %0 =                                            +
- | Get materialize.public.totals (u11)           +
- | Filter (#3 = 0)                               +
- | Project (#0..=#2, #4)                         +
- | FlatMap generate_series((#0 - 1), (#0 + 1), 1)+
- | FlatMap generate_series((#1 - 1), (#1 + 1), 1)+
- | Filter ((#0 != #4) OR (#1 != #5))             +
- | Project (#2..=#5)                             +
- | Distinct group=(#2, #3, #0, #1)               +
-                                                 +
- %1 =                                            +
- | Get materialize.public.tests (u4)             +
- | Distinct group=(#0, #1, #2, #3)               +
- | Negate                                        +
-                                                 +
- %2 =                                            +
- | Union %0 %1                                   +
- | Threshold                                     +
-
-(1 row)
-
-Time: 13.305 ms
-materialize=>
-```
-
-When we create an index, things improve dramatically.
-```
-materialize=> create default index on should_test;
-CREATE INDEX
-Time: 254.244 ms
-materialize=> select * from should_test;
- x | y | test | team
----+---+------+------
-(0 rows)
-
-Time: 13.896 ms
-materialize=>
-```
-That time is now roughly the same time it takes to `explain` the query, which is mostly the overhead of me reaching Materialize in `us-east-1`.
-
-Of course, this isn't for free. We still had to do the work we did above, it's just it took me at least that long to type the new query.
-But, if we repeatedly select from `should_test` we see that it is consistently prompt:
-```
-materialize=> select * from should_test;
- x | y | test | team
----+---+------+------
-(0 rows)
-
-Time: 14.153 ms
-materialize=> select * from should_test;
- x | y | test | team
----+---+------+------
-(0 rows)
-
-Time: 15.938 ms
-materialize=> select * from should_test;
- x | y | test | team
----+---+------+------
-(0 rows)
-
-Time: 15.749 ms
-materialize=> select * from should_test;
- x | y | test | team
----+---+------+------
-(0 rows)
-
-Time: 13.309 ms
-materialize=>
-```
-
-You can also create an index on a subset of columns (or any expressions), giving fast random access to those columns.
-```
-materialize=> create index should_test_by_team on should_test (team);
-```
-This index will make it very fast to run our `select * from should_test where team = 'frank'` query.
-You can see in the explained plan the `ReadExistingIndex` node is annotated with `Lookup value ("frank")`.
-```
-materialize=> explain select * from should_test where team = 'frank';
-                       Optimized Plan
-------------------------------------------------------------
- %0 =                                                      +
- | ReadExistingIndex materialize.public.should_test_by_team+
- | | Lookup value ("frank")                                +
- | Project (#1..=#3, #0)                                   +
-
-(1 row)
-materialize=>
-```
-
-
-Indexes come with a cost: you have to maintain the results.
-Maintaining the results costs CPU and memory.
-Since the `team_frank` cluster is meant for the exclusive use of team `frank`, we can thin down the results before we index them.
-```
-materialize=> create view should_test_frank as select * from should_test where team = 'frank';
-materialize=> create default index on should_test_frank;
-```
-We now have a view `should_test_frank` that is locally indexed.
-We'll only keep records with `team = 'frank'`, which should reduce the work we have to do.
-
-Indexes doing a lot of other great things, from serving results fast to speeding up join processing.
-There is much more to learn about them later!
-
-### Materialized views
-
-Materialized views are Materialize's mechanism to maintain views durably and share them between clusters.
-
-Like indexes, materialized views *maintain* views, and can dramatically reduce the work that is re-done for repeated queries.
-Unlike indexes, materialized views can be shared between clusters, which opens up new data architectures.
-
-You may have noticed that we used several `create materialized view` commands in the examples above.
-I did these intentionally, at moments where I thought other clusters might benefit from the results.
-Let's take a closer look.
-
-When we created `errors` we did it as a materialized view.
-```sql
--- Errors are too bad. But they don't end the game.
-create materialized view errors as ...
-```
-This will let anyone else observe the `errors` collection from their own cluster.
-They don't need to hop on to the `default` cluster and potentially overwhelm it.
-
-We also made `totals` a materialized view.
-```sql
--- The number of adjacent mines for probed locations.
-create materialized view totals as ...
-```
-This represents the board state, and multiple teams might each like to use this on their own clusters.
-In our definitions of `should_test` and `should_flag` we use `totals`, and having it pre-defined is helpful!
-
-Finally, we made `composited` a materialized view.
-```sql
--- Convert counts to symbols, mines, clear cells, and include '.' for unknown locations.
-create materialized view composited as ...
-```
-This is the end result of a bunch of reasoning about the board state, and likely to be interesting to many folks.
-By making this a materialized view, we can both allow other clusters to read the results, and reduce the query load when one selects from it.
+Forthcoming!
